[gd_scene load_steps=108 format=2]

[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_000.png" type="Texture" id=1]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_001.png" type="Texture" id=2]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_002.png" type="Texture" id=3]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_003.png" type="Texture" id=4]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_004.png" type="Texture" id=5]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_005.png" type="Texture" id=6]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_006.png" type="Texture" id=7]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_007.png" type="Texture" id=8]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_008.png" type="Texture" id=9]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_009.png" type="Texture" id=10]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_010.png" type="Texture" id=11]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_011.png" type="Texture" id=12]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_012.png" type="Texture" id=13]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_013.png" type="Texture" id=14]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_014.png" type="Texture" id=15]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_015.png" type="Texture" id=16]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_016.png" type="Texture" id=17]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Idle Blinking/0_Golem_Idle Blinking_017.png" type="Texture" id=18]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_000.png" type="Texture" id=19]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_001.png" type="Texture" id=20]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_002.png" type="Texture" id=21]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_003.png" type="Texture" id=22]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_004.png" type="Texture" id=23]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_005.png" type="Texture" id=24]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_006.png" type="Texture" id=25]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_007.png" type="Texture" id=26]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_008.png" type="Texture" id=27]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_009.png" type="Texture" id=28]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_010.png" type="Texture" id=29]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Running/0_Golem_Running_011.png" type="Texture" id=30]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_000.png" type="Texture" id=31]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_001.png" type="Texture" id=32]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_002.png" type="Texture" id=33]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_003.png" type="Texture" id=34]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_004.png" type="Texture" id=35]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_005.png" type="Texture" id=36]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_006.png" type="Texture" id=37]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_007.png" type="Texture" id=38]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_008.png" type="Texture" id=39]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_009.png" type="Texture" id=40]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_010.png" type="Texture" id=41]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_011.png" type="Texture" id=42]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_012.png" type="Texture" id=43]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_013.png" type="Texture" id=44]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Dying/0_Golem_Dying_014.png" type="Texture" id=45]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_000.png" type="Texture" id=46]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_001.png" type="Texture" id=47]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_002.png" type="Texture" id=48]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_003.png" type="Texture" id=49]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_004.png" type="Texture" id=50]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_005.png" type="Texture" id=51]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_006.png" type="Texture" id=52]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_007.png" type="Texture" id=53]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_008.png" type="Texture" id=54]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_009.png" type="Texture" id=55]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_010.png" type="Texture" id=56]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Throwing/0_Golem_Throwing_011.png" type="Texture" id=57]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_000.png" type="Texture" id=58]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_001.png" type="Texture" id=59]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_002.png" type="Texture" id=60]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_003.png" type="Texture" id=61]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_004.png" type="Texture" id=62]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_005.png" type="Texture" id=63]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_006.png" type="Texture" id=64]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_007.png" type="Texture" id=65]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_008.png" type="Texture" id=66]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_009.png" type="Texture" id=67]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_010.png" type="Texture" id=68]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Hurt/0_Golem_Hurt_011.png" type="Texture" id=69]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_000.png" type="Texture" id=70]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_001.png" type="Texture" id=71]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_002.png" type="Texture" id=72]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_003.png" type="Texture" id=73]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_004.png" type="Texture" id=74]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_005.png" type="Texture" id=75]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_006.png" type="Texture" id=76]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_007.png" type="Texture" id=77]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_008.png" type="Texture" id=78]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_009.png" type="Texture" id=79]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_010.png" type="Texture" id=80]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Kicking/0_Golem_Kicking_011.png" type="Texture" id=81]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_000.png" type="Texture" id=82]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_001.png" type="Texture" id=83]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_002.png" type="Texture" id=84]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_003.png" type="Texture" id=85]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_004.png" type="Texture" id=86]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_005.png" type="Texture" id=87]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_006.png" type="Texture" id=88]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_007.png" type="Texture" id=89]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_008.png" type="Texture" id=90]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_009.png" type="Texture" id=91]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_010.png" type="Texture" id=92]
[ext_resource path="res://personaje/Golem_1/PNG/PNG Sequences/Slashing/0_Golem_Slashing_011.png" type="Texture" id=93]
[ext_resource path="res://prota2.gd" type="Script" id=94]
[ext_resource path="res://Atake_per1.gd" type="Script" id=95]
[ext_resource path="res://Magia_per1.gd" type="Script" id=96]
[ext_resource path="res://assets/GUI/label_HP_bg.png" type="Texture" id=97]
[ext_resource path="res://assets/GUI/label_HP.png" type="Texture" id=98]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=99]
[ext_resource path="res://assets/GUI/lifebar_bg.png" type="Texture" id=100]
[ext_resource path="res://assets/GUI/lifebar_fill.png" type="Texture" id=101]
[ext_resource path="res://assets/GUI/label_EP.png" type="Texture" id=102]
[ext_resource path="res://assets/GUI/energy_bar_bg.png" type="Texture" id=103]
[ext_resource path="res://assets/GUI/energy_bar_fill.png" type="Texture" id=104]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ) ],
"loop": false,
"name": "death",
"speed": 15.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ) ],
"loop": true,
"name": "Tirar",
"speed": 10.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ) ],
"loop": false,
"name": "Hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ) ],
"loop": true,
"name": "Patada",
"speed": 10.0
}, {
"frames": [ ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ) ],
"loop": true,
"name": "Palo",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 28
extra_spacing_bottom = 8
font_data = ExtResource( 99 )

[sub_resource type="DynamicFont" id=3]
size = 18
extra_spacing_bottom = -3
font_data = ExtResource( 99 )

[node name="prota2" type="AnimatedSprite"]
position = Vector2( 198.138, 222.936 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "Idle"
frame = 9
playing = true
script = ExtResource( 94 )

[node name="menu_accion" type="Container" parent="."]
visible = false
margin_left = 250.0
margin_top = -117.838
margin_right = 550.0
margin_bottom = 2.66211
rect_scale = Vector2( 3, 3 )

[node name="ataque" type="MenuButton" parent="menu_accion"]
margin_right = 100.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 1
mouse_default_cursor_shape = 2
size_flags_stretch_ratio = 47.34
custom_constants/hseparation = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 1
text = "Ataque"
flat = false
align = 0
switch_on_hover = true
script = ExtResource( 95 )

[node name="PopupMenu2" type="PopupMenu" parent="menu_accion/ataque"]
margin_left = -300.0
margin_top = -420.0
margin_right = -280.0
margin_bottom = -400.0

[node name="magia" type="MenuButton" parent="menu_accion"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 39.0
toggle_mode = true
text = "Magia"
flat = false
align = 0
script = ExtResource( 96 )

[node name="PopupMenu2" type="PopupMenu" parent="menu_accion/magia"]
margin_right = 20.0
margin_bottom = 20.0

[node name="valores_aliados" type="MarginContainer" parent="."]
editor/display_folded = true
margin_left = -668.391
margin_top = 350.0
margin_right = 172.609
margin_bottom = 412.0
rect_scale = Vector2( 2, 2 )

[node name="constantes" type="HBoxContainer" parent="valores_aliados"]
margin_right = 841.0
margin_bottom = 62.0

[node name="vida" type="VBoxContainer" parent="valores_aliados/constantes"]
margin_right = 500.0
margin_bottom = 62.0

[node name="barra1" type="HBoxContainer" parent="valores_aliados/constantes/vida"]
margin_right = 500.0
margin_bottom = 53.0

[node name="contenedor" type="MarginContainer" parent="valores_aliados/constantes/vida/barra1"]
margin_right = 100.0
margin_bottom = 53.0

[node name="fondo" type="NinePatchRect" parent="valores_aliados/constantes/vida/barra1/contenedor"]
margin_right = 100.0
margin_bottom = 53.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 97 )

[node name="tipo" type="TextureRect" parent="valores_aliados/constantes/vida/barra1/contenedor/fondo"]
margin_right = 50.0
margin_bottom = 53.0
texture = ExtResource( 98 )
stretch_mode = 4

[node name="valor" type="Label" parent="valores_aliados/constantes/vida/barra1/contenedor/fondo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "10"
align = 2
valign = 2

[node name="PS" type="TextureProgress" parent="valores_aliados/constantes/vida/barra1"]
margin_left = 104.0
margin_right = 500.0
margin_bottom = 53.0
value = 50.0
texture_under = ExtResource( 100 )
texture_progress = ExtResource( 101 )

[node name="magia" type="VBoxContainer" parent="valores_aliados/constantes"]
margin_left = 504.0
margin_right = 833.0
margin_bottom = 62.0

[node name="barra2" type="HBoxContainer" parent="valores_aliados/constantes/magia"]
margin_right = 329.0
margin_bottom = 53.0

[node name="contenedor" type="MarginContainer" parent="valores_aliados/constantes/magia/barra2"]
margin_right = 75.0
margin_bottom = 53.0
rect_min_size = Vector2( 75, 53 )

[node name="fondo" type="NinePatchRect" parent="valores_aliados/constantes/magia/barra2/contenedor"]
margin_right = 75.0
margin_bottom = 53.0
texture = ExtResource( 97 )

[node name="tipo" type="TextureRect" parent="valores_aliados/constantes/magia/barra2/contenedor/fondo"]
margin_right = 50.0
margin_bottom = 53.0
texture = ExtResource( 102 )
stretch_mode = 4

[node name="valor" type="Label" parent="valores_aliados/constantes/magia/barra2/contenedor/fondo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "50"
align = 2
valign = 1

[node name="PM" type="TextureProgress" parent="valores_aliados/constantes/magia/barra2"]
margin_left = 79.0
margin_right = 329.0
margin_bottom = 53.0
rect_min_size = Vector2( 250, 0 )
value = 10.0
texture_under = ExtResource( 103 )
texture_progress = ExtResource( 104 )

[node name="potis" type="HBoxContainer" parent="valores_aliados"]
margin_right = 841.0
margin_bottom = 62.0

[connection signal="atk_esp" from="menu_accion/ataque" to="." method="_on_MenuButton_atk_esp"]
[connection signal="atk_magia_1" from="menu_accion/magia" to="." method="_on_MenuButton2_atk_magia_1"]
